# api/project/v1/gen/http/openapi3.yaml
@@ -352,9 +352,6 @@ paths:
                             legal_entity_type: Subproject
                             legal_parent_uid: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                             logo_url: https://example.com/logo.png
-                            marketing_ops_team:
-                                name: LF Marketing Ops
-                                uid: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                             meeting_coordinators:
                                 - avatar: https://example.com/avatar1.jpg
                                   email: john.doe@example.com
@@ -2396,8 +2393,6 @@ components:
                     description: The URL of the project logo
                     example: https://example.com/logo.png
                     format: uri
-                marketing_ops_team:
-                    $ref: '#/components/schemas/TeamReference'
                 meeting_coordinators:
                     type: array
                     items:
@@ -2506,9 +2501,6 @@ components:
                 legal_entity_type: Subproject
                 legal_parent_uid: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                 logo_url: https://example.com/logo.png
-                marketing_ops_team:
-                    name: LF Marketing Ops
-                    uid: 7cad5a8d-19d0-41a4-81a6-043453daf9ee
                 meeting_coordinators:
                     - avatar: https://example.com/avatar1.jpg
                       email: john.doe@example.com
